public/scss/custom.scss
// Custom.scss
// Option A: Include all of Bootstrap
// Your variable overrides
$slw-primary: #447C1D;
$slw-lightgreen: #95D469;
$slw-primary-darker: rgb(32, 65, 8);
$slw-danger: #ff4136;
$slw-secondary: #5bc0de;
$slw-secondary-darker: #3691ad;
$slw-cool-purple: #9d99c1;
$slw-light-secondary: #d8d8d8;
$slw-dark: #1f1f1f;
$slw-darker: #151515;
$slw-dark-transparent: rgba(23, 23, 23, 0.58);
$slw-antique-white: #faebd7;
$enable-gradients: false;
$enable-shadows: true;
$standard-height: 190px;
$landing-page-height: 800px;
$school-header-height: 540px;
$review-image-dimension: 60px;
$image-container-height: 12rem;

// Rating colors
$rating-great:#47a347;
$rating-good: #76bf33;
$rating-medium: #87a56a;
$rating-bad: #68745c;
// $rating-great:#47a347;
// $rating-good: #76bf33;
// $rating-medium: #e6e13d;
// $rating-bad: #c73d13;
$theme-colors: ( "primary": $slw-primary, "primary-darker": $slw-primary-darker, "dark-transparent": $slw-dark-transparent, "antique-white": $slw-antique-white, "lightgreen": $slw-lightgreen, "secondary": $slw-secondary, "cool-purple": $slw-cool-purple, "danger": $slw-danger, "slw-green": $slw-primary, "light-secondary": $slw-light-secondary, "dark": $slw-dark, "darker": $slw-darker, "rating-great": $rating-great, "rating-good": $rating-good, "rating-medium": $rating-medium, "rating-bad": $rating-bad);
@import "node_modules/bootstrap/scss/bootstrap";
// CORE
// Bootstrap & MDB
@import "node_modules/mdbootstrap/scss/core/bootstrap/functions";
@import "node_modules/mdbootstrap/scss/core/bootstrap/variables";
@import "node_modules/mdbootstrap/scss/core/mixins";
// @import "node_modules/mdbootstrap/scss/core/colors";
@import "./mdbcolors";
@import "node_modules/mdbootstrap/scss/core/variables";
$link-color: $slw-primary;
@import "node_modules/mdbootstrap/scss/core/global";
@import "node_modules/mdbootstrap/scss/core/helpers";
@import "node_modules/mdbootstrap/scss/core/typography";
@import "node_modules/mdbootstrap/scss/core/masks";
@import "node_modules/mdbootstrap/scss/core/waves";
@import "node_modules/mdbootstrap/scss/free/forms";
@import "node_modules/mdbootstrap/scss/free/animations-basic";
@import "node_modules/mdbootstrap/scss/free/animations-extended";
@import "node_modules/mdbootstrap/scss/free/buttons";
@import "node_modules/mdbootstrap/scss/free/cards";
@import "node_modules/mdbootstrap/scss/free/dropdowns";
@import "node_modules/mdbootstrap/scss/free/navbars";
@import "node_modules/mdbootstrap/scss/free/pagination";
@import "node_modules/mdbootstrap/scss/free/badges";
@import "node_modules/mdbootstrap/scss/free/modals";
@import "node_modules/mdbootstrap/scss/free/carousels";
@import "node_modules/mdbootstrap/scss/free/forms";
@import "node_modules/mdbootstrap/scss/free/input-group";
@import "node_modules/mdbootstrap/scss/free/msc";
@import "node_modules/mdbootstrap/scss/free/footers";
@import "node_modules/mdbootstrap/scss/free/list-group";
@import "node_modules/mdbootstrap/scss/free/tables";
// $primary-color: $slw-primary;
// $error-color:  $slw-danger;
// $success-color:  $slw-primary;
@each $color,
$value in $theme-colors {
  .text-shadow-#{$color} {
    text-shadow: 2px 2px 15px $value;
  }
}

.bg-inherit{
  background-color: inherit;
}

@each $color,
$value in $theme-colors {

  .border-bottom-0 {
    border-bottom: none;
  }
  .border-bottom-1-#{$color} {
    border-bottom: solid 1px $value;
  }
  .border-bottom-2-#{$color} {
    border-bottom: solid 2px $value;
  }
  .border-bottom-3-#{$color} {
    border-bottom: solid 3px $value;
  }
  .border-bottom-5-#{$color} {
    border-bottom: solid 5px $value;
  }

  .border-top-0 {
    border-top: none;
  }
  .border-top-1-#{$color} {
    border-top: solid 1px $value;
  }
  .border-top-2-#{$color} {
    border-top: solid 2px $value;
  }
  .border-top-3-#{$color} {
    border-top: solid 3px $value;
  }
  .border-top-5-#{$color} {
    border-top: solid 5px $value;
  }
}

.no-drop-shadow {
  box-shadow: 0 0 !important;
}

@each $color,
$value in $theme-colors {
  .swatch-#{$color} {
    color: color-yiq($value);
  }
}

h1 {
  font-family: 'Bree Serif', sans-serif;
}

body {
  font-family: 'Raleway', sans-serif;
}

.mb-12 {
  margin-bottom: 12rem;
}
.zindex-pop {
  z-index: $zindex-dropdown;
}



.main-header.bg-transparent .navbar-nav a {
  color: white;
}

.main-header.bg-transparent {
  box-shadow: none;
  transition: background-color 0.5s linear;
}

.main-header {
  transition: background-color 0.5s linear;
}

.nav-bar-slide-in {
  width: 0;
  overflow: hidden;
  transition: width 1s linear;
}

.text-small {
  font-size: 0.8rem;
}

// Adjusting number of cards per column and deck  
.card-columns {
  @include media-breakpoint-only(md) {
    column-count: 2;
  }
  @include media-breakpoint-only(sm) {
    column-count: 2;
  }
}

.card-deck {
  @include media-breakpoint-only(lg) {
    column-count: 3;
  }
  @include media-breakpoint-only(md) {
    column-count: 2;
  }
  @include media-breakpoint-only(sm) {
    column-count: 2;
  }
}

/////////////////////////////////////////////////////////////////////////////////////
//PRE HEADER
/////////////////////////////////////////////////////////////////////////////////////
.pre-header {
  padding: 0;
  font-size: 13px;
}

.transparent-black {
  background-color: rgba(0, 0, 0, .5);
}

.navbar-dark .navbar-nav .nav-link {
  color: rgba(255, 255, 255, .7);
}

////////////////////////////////////////////////////////////////////////////////////////////////
//HOMEPAGE SPLASH LANDING
////////////////////////////////////////////////////////////////////////////////////////////////
.splash {
  min-height: $landing-page-height;
  margin-top: -4rem;
  padding-top:4rem;
  overflow: hidden;
  position: relative;
  color: #fff;
  text-align: center;
}
/* ... */

